# Zappy-Tournament

./: .gitignore  Makefile  README.md
ai/guanta/: Makefile
ai/guanta/ai/: algorithms.py  commands.py  constants.py  data.py  documentation.md  exceptions.py  goal.py  main.py  parsing.py  player.py  print.py  strategies.py  tile.py  traduction.py
ai/ia2ref/: .gitignore  Dockerfile  Makefile  build.sh  requirements.txt  start.sh  zappy_ai
ai/ia2ref/.devcontainer/: Dockerfile  devcontainer.json
ai/ia2ref/binaries/: .gitignore  start_ai.sh  start_all.sh  start_gui.sh  start_server.sh
ai/insert_name/: Makefile  launch_army.sh
ai/shrike/: Makefile  zappy_ai
ai/sugoAI/: CMakeLists.txt  Makefile  README.org  ia.org  zappy_ai
ai/sugoAI/include/: Broadcaster.hpp  Ia.hpp  Utils.hpp
ai/sugoAI/include/connection/: Connection.hpp
ai/sugoAI/include/dependencies_graph/: Dependencies_graph.hpp
ai/sugoAI/include/error/: Error.hpp
ai/sugoAI/include/map/: Map.hpp  World_enums.hpp
ai/sugoAI/include/parsing/: Parsing.hpp
ai/sugoAI/include/player/: Farmer.hpp  FarmerSpawner.hpp  Gatherer.hpp  Incanter.hpp  Nitwit.hpp  Player.hpp  Repeater.hpp  Request.hpp  Role.hpp  Spawner.hpp
ai/sugoAI/scripts/: genkey.c
ai/sugoAI/src/: Broadcaster.cpp  Utils.cpp  main.cpp
ai/sugoAI/src/connection/: Connection.cpp
ai/sugoAI/src/dependencies_graph/: Tree.cpp
ai/sugoAI/src/error/: Error.cpp
ai/sugoAI/src/map/: Map.cpp  World_enums.cpp
ai/sugoAI/src/parsing/: Parsing.cpp
ai/sugoAI/src/player/: Farmer.cpp  FarmerSpawner.cpp  Gatherer.cpp  Incanter.cpp  Nitwit.cpp  Player.cpp  Repeater.cpp  Request.cpp  Spawner.cpp
ai/sugoAI/tests/: CMakeLists.txt  coding_style.h  encryption.cpp  look_parsing.cpp  player.cpp
ai/thegreatAI/: .gitignore  Makefile
src/: color.py  main.py  match.py  parsing.py  result.py  schedule.py  settings.py  test.py
(+116 files in other folders)
